; ModuleID = '/home/carl/AnghaBench/h2o/lib/handler/configurator/extr_status.c_h2o_status_register_configurator.c'
source_filename = "/home/carl/AnghaBench/h2o/lib/handler/configurator/extr_status.c_h2o_status_register_configurator.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.st_status_configurator = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }

@on_enter_status = common dso_local global i32 0, align 4
@on_exit_status = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [7 x i8] c"status\00", align 1
@H2O_CONFIGURATOR_FLAG_PATH = common dso_local global i32 0, align 4
@H2O_CONFIGURATOR_FLAG_DEFERRED = common dso_local global i32 0, align 4
@H2O_CONFIGURATOR_FLAG_EXPECT_SCALAR = common dso_local global i32 0, align 4
@on_config_status = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [15 x i8] c"duration-stats\00", align 1
@H2O_CONFIGURATOR_FLAG_GLOBAL = common dso_local global i32 0, align 4
@on_config_duration_stats = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @h2o_status_register_configurator(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca %struct.st_status_configurator*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i64 @h2o_configurator_create(i32* %4, i32 8)
  %6 = inttoptr i64 %5 to i8*
  %7 = bitcast i8* %6 to %struct.st_status_configurator*
  store %struct.st_status_configurator* %7, %struct.st_status_configurator** %3, align 8
  %8 = load i32, i32* @on_enter_status, align 4
  %9 = load %struct.st_status_configurator*, %struct.st_status_configurator** %3, align 8
  %10 = getelementptr inbounds %struct.st_status_configurator, %struct.st_status_configurator* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 1
  store i32 %8, i32* %11, align 4
  %12 = load i32, i32* @on_exit_status, align 4
  %13 = load %struct.st_status_configurator*, %struct.st_status_configurator** %3, align 8
  %14 = getelementptr inbounds %struct.st_status_configurator, %struct.st_status_configurator* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  store i32 %12, i32* %15, align 4
  %16 = load %struct.st_status_configurator*, %struct.st_status_configurator** %3, align 8
  %17 = getelementptr inbounds %struct.st_status_configurator, %struct.st_status_configurator* %16, i32 0, i32 0
  %18 = load i32, i32* @H2O_CONFIGURATOR_FLAG_PATH, align 4
  %19 = load i32, i32* @H2O_CONFIGURATOR_FLAG_DEFERRED, align 4
  %20 = or i32 %18, %19
  %21 = load i32, i32* @H2O_CONFIGURATOR_FLAG_EXPECT_SCALAR, align 4
  %22 = or i32 %20, %21
  %23 = load i32, i32* @on_config_status, align 4
  %24 = call i32 @h2o_configurator_define_command(%struct.TYPE_2__* %17, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i32 %22, i32 %23)
  %25 = load %struct.st_status_configurator*, %struct.st_status_configurator** %3, align 8
  %26 = getelementptr inbounds %struct.st_status_configurator, %struct.st_status_configurator* %25, i32 0, i32 0
  %27 = load i32, i32* @H2O_CONFIGURATOR_FLAG_GLOBAL, align 4
  %28 = load i32, i32* @H2O_CONFIGURATOR_FLAG_EXPECT_SCALAR, align 4
  %29 = or i32 %27, %28
  %30 = load i32, i32* @on_config_duration_stats, align 4
  %31 = call i32 @h2o_configurator_define_command(%struct.TYPE_2__* %26, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.1, i64 0, i64 0), i32 %29, i32 %30)
  ret void
}

declare dso_local i64 @h2o_configurator_create(i32*, i32) #1

declare dso_local i32 @h2o_configurator_define_command(%struct.TYPE_2__*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
